@@ -197,13 +197,14 @@ JOPTION_USE_DEFAULT=Use Default
 
 USERS_MAIL=Mass Mail
 USERS_MAIL_ALL_USERS_GROUPS=All Users Groups
+USERS_MAIL_DESC=Mass Mail options
 USERS_MAIL_DETAILS=Details
 USERS_MAIL_DESCRIPTION=This Component allows you to send a mass e-mail to certain User Groups
 USERS_MAIL_EMAIL_SENT_TO=E-mail sent to %s Users
 USERS_MAIL_GROUP_DESC=Group Description
 USERS_MAIL_GROUP=Group:
+USERS_MAIL_MAILBODY_SUFFIX_DESC=This gets added after the mail text
 USERS_MAIL_MAILBODY_SUFFIX=Mailbody Suffix
-USERS_MAIL_MAILBODY_SUFFIX_TIP=This gets added after the mail text
 USERS_MAIL_MESSAGE_DESC=Message Desc
 USERS_MAIL_MESSAGE=Message
 USERS_MAIL_NO_USERS_COULD_BE_FOUND_IN_THIS_GROUP=No users could be found in this group
@@ -218,10 +219,10 @@ USERS_MAIL_SEND_AS_BLIND_CARBON_COPY=Hides recipient list and adds copy to site 
 USERS_MAIL_SEND_IN_HTML_MODE_DESC=Send in HTML mode Description
 USERS_MAIL_SEND_IN_HTML_MODE=Send in HTML mode:
 USERS_MAIL_SEND_MAIL=Send mail
+USERS_MAIL_SUBJECT=Subject
 USERS_MAIL_SUBJECT_DESC=Subject Desc
 USERS_MAIL_SUBJECT_PREFIX=Subject Prefix
-USERS_MAIL_SUBJECT_PREFIX_TIP=This gets added in front of each mail subject
-USERS_MAIL_SUBJECT=Subject
+USERS_MAIL_SUBJECT_PREFIX_DESC=This gets added in front of each mail subject
 USERS_MAIL_THE_MAIL_COULD_NOT_BE_SENT=The mail could not be sent
 
 COM_USERS_CONFIGURATION=User Manager Options
